# OOP_lab1

./: OOP_lab_1.docx  ex.py  pyproject.toml
src/OOP_lab_1/: pair.py  time.py
tests/: test_pair.py  test_time.py
